feat(web): add Next.js landing + dashboard scaffolding; feat(api): interviews routes; chore(db): Supabase schema for multi-tenant interviews with RLS; fix(ext): summary modal, transcript persistence, research prompt compose; fallback(OpenAI): retry without response_format on 400

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -188,6 +188,14 @@
     </div>
 
     <div class="quick-actions">
+      <a href="#" class="action-btn" id="startStandaloneSession">
+        <div class="action-icon">🎤</div>
+        <div class="action-text">
+          <h3>Start Interview Session</h3>
+          <p>Begin recording without a meeting</p>
+        </div>
+      </a>
+
       <a href="#" class="action-btn" id="openDashboard">
         <div class="action-icon">📊</div>
         <div class="action-text">
