--- a/settings/settings.html
+++ b/settings/settings.html
@@ -282,9 +282,9 @@
         <label class="form-label" for="aiModel">AI Model</label>
         <div class="select-wrapper">
           <select id="aiModel" class="form-select">
-            <option value="gpt-4-turbo-preview">GPT-4 Turbo (Recommended)</option>
-            <option value="gpt-4">GPT-4</option>
-            <option value="gpt-3.5-turbo">GPT-3.5 Turbo (Faster, Lower Cost)</option>
+            <option value="gpt-5" selected>GPT-5 (Latest)</option>
+            <option value="gpt-4.1">GPT-4.1</option>
+            <option value="gpt-4o">GPT-4o</option>
           </select>
           <span class="select-arrow">▼</span>
         </div>
